--- a/sass/modules/testimonial/_testimonial-slider-area-two.scss
+++ b/sass/modules/testimonial/_testimonial-slider-area-two.scss
@@ -56,9 +56,12 @@
                   @media only screen and (min-width: 769px) and (max-width: 991px){
                     min-width: 350px !important;
                   }
-                  @media only screen and (min-width: 0px) and (max-width: 768px){
+                  @media only screen and (min-width: 768px) and (max-width: 991px){
                     margin-left: 42px !important;
                     margin-right: 42px !important;
+                  }
+                  @include sm{
+                    margin: 0 12px 80px 12px;
                   }
                   &.slick-active{
                     @include xl{
